syntax = "proto3";

package noble.tariff.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "noble/tariff/v1/params.proto";

option go_package = "github.com/noble-assets/noble/v5/x/tariff/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/noble/tariff/v1/params";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
